--- a/package.json
+++ b/package.json
@@ -1,20 +1,31 @@
 {
-  "name": "billburst",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "10.1.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.2.5",
-    "postcss": "^8.2.9",
-    "tailwindcss": "^2.1.1"
-  }
+	"name": "billburst",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"test": "jest --watch"
+	},
+	"dependencies": {
+		"next": "10.1.3",
+		"react": "17.0.2",
+		"react-dom": "17.0.2"
+	},
+	"devDependencies": {
+		"@testing-library/jest-dom": "^5.11.10",
+		"@testing-library/react": "^11.2.6",
+		"@testing-library/user-event": "^13.1.1",
+		"autoprefixer": "^10.2.5",
+		"babel-jest": "^26.6.3",
+		"jest": "^26.6.3",
+		"postcss": "^8.2.9",
+		"tailwindcss": "^2.1.1"
+	},
+	"jest": {
+		"setupFilesAfterEnv": [
+			"<rootDir>/setupTests.js"
+		]
+	}
 }
