--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "next": "10.1.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-transition-group": "^4.4.1"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.10",
