--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --ignore-path .gitignore --write ."
   },
   "dependencies": {
+    "framer-motion": "^4.1.3",
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
