--- a/package.json
+++ b/package.json
@@ -6,29 +6,22 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "jest --watch",
-    "format": "prettier --ignore-path .gitignore --write ."
+    "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^4.1.3",
-    "next": "10.1.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "framer-motion": "^11.2.6",
+    "next": "14.2.3",
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^13.1.1",
-    "autoprefixer": "^10.2.5",
-    "babel-jest": "^26.6.3",
-    "jest": "^26.6.3",
-    "postcss": "^8.2.9",
-    "prettier": "^2.2.1",
-    "tailwindcss": "^2.1.1"
-  },
-  "jest": {
-    "setupFilesAfterEnv": [
-      "<rootDir>/setupTests.js"
-    ]
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
