--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "framer-motion": "^11.2.6",
     "next": "14.2.3",
+    "posthog-js": "^1.136.7",
     "react": "^18",
     "react-dom": "^18"
   },
