--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.6",
     "next": "14.2.3",
+    "next-themes": "^0.3.0",
     "posthog-js": "^1.136.7",
     "react": "^18",
     "react-dom": "^18",
